Align Dockerfile